<resources xml:space="preserve">
    <string name="app_name">ShanGui</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login">登录</string>
    <string name="text_phone">手机号：</string>
    <string name="text_password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="text_save_password">保存密码</string>
    <string name="text_fast_register">快速注册</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="title_register">注册</string>
    <string name="text_name">真实姓名：</string>
    <string name="text_id">身份证号：</string>
    <string name="text_phone_num">手机号码：</string>
    <string name="text_next">下一步</string>
    <string name="text_fast_login">立即登录</string>
    <string name="text_protocol1">注册即代表阅读并同意闪柜服务协议</string>
    <string name="text_setting_password">设置密码：</string>
    <string name="text_confirm_password">确认密码：</string>
    <string name="text_countersign">确认</string>
    <string name="text_send_code">已发送验证码至手机号：</string>
    <string name="title_forget_password">忘记密码</string>
    <string name="text_btn_code">验证码</string>
    <string name="text_code">验证码：</string>
    <string name="title_box">箱子</string>
    <string name="text_chat">聊天</string>
    <string name="text_main">首页</string>
    <string name="text_my">我的</string>
    <string name="text_due_in">待收</string>
    <string name="text_record">记录</string>
    <string name="text_consume">已消耗：</string>
    <string name="text_advance">预付款：</string>
    <string name="text_location">位置：</string>
    <string name="text_message">附言：</string>
    <string name="text_receive">接收</string>
    <string name="text_reject">拒收</string>
    <string name="text_unit">元</string>
    <string name="text_hint_reject">请输入拒绝原因</string>
    <string name="text_unlocking">开锁</string>
    <string name="text_finish">关门\n退箱</string>
    <string name="text_convey">运送中</string>
    <string name="text_deliver">转交中</string>
    <string name="text_cancel">取消</string>
    <string name="text_address">位置：</string>
    <string name="text_box_num">柜号：</string>
    <string name="text_convey_goods">运送\n物品</string>
    <string name="text_deliver_goods">转交\n物品</string>
    <string name="text_cancel_convey">取消\n运送</string>
    <string name="text_cancel_deliver">取消\n转交</string>
    <string name="text_wait">等待</string>
    <string name="text_accept">接收中</string>
    <string name="text_change_location">更换目的地</string>
    <string name="text_destination_num">目的网点编号：</string>
    <string name="text_destination_name">目的网店名称：</string>
    <string name="text_freight">运费：￥</string>
    <string name="text_init_freight">0.00</string>
    <string name="text_zero">0</string>
    <string name="text_recipients">收件人：</string>
    <string name="text_friend">闪柜好友</string>
    <string name="text_address_list">通讯录</string>
    <string name="text_expenditure">目前消费：</string>
    <string name="text_deliver_info">转交信息</string>
    <string name="text_map_btn">地图\n按钮</string>
    <string name="text_search_box">请输入地点或柜名或柜编号</string>
    <string name="text_nearby">附近</string>
    <string name="text_personal">个人中心</string>
    <string name="text_upgrade">版本升级</string>
    <string name="text_recharge">账户充值</string>
    <string name="text_help">使用帮助</string>
    <string name="text_logout">退出登录</string>
    <string name="text_recharge_record">充值记录</string>
    <string name="text_recharge_way">选择充值方式</string>
    <string name="text_recharge_num">充值金额</string>
    <string name="text_yuan">￥</string>
    <string name="text_alipay_pay">支付宝支付</string>
    <string name="text_wechat_pay">微信支付</string>
    <string name="text_fast_recharge">立即充值</string>
    <string name="text_head">头&#160;&#160;&#160;&#160;像</string>
    <string name="text_compellation">姓&#160;&#160;&#160;&#160;名</string>
    <string name="text_id_num">身份证</string>
    <string name="text_balance">余&#160;&#160;&#160;&#160;额</string>
    <string name="text_help1">如何在支付后如何申请退款？</string>
    <string name="text_help2">如何查询充值信息？</string>
    <string name="text_help3">如何取消充值？</string>
    <string name="text_help4">如何查询自己租的箱子的位置？</string>
    <string name="text_password_tip">(至少8位含数字，字母，符号中的两种)</string>
</resources>
