<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shangui.shangui.activity.RechargeActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"/>

        <TextView
            android:id="@+id/recharge_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="15dp"
            android:text="@string/text_recharge_record"
            style="@style/TextBlack"
            android:textColor="@color/colorWhite"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBgGray"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            style="@style/TextBlack"
            android:textColor="@color/colorTextGray"
            android:text="@string/text_recharge_way"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/zfb"
                        android:layout_margin="13dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextBlack"
                        android:text="@string/text_alipay_pay"
                        android:textColor="@color/colorPayTextBlack"/>

                </LinearLayout>

                <RadioButton
                    android:id="@+id/recharge_alipay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pay_bg"
                    android:button="@null"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="15dp"
                    android:clickable="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBgGray"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/wx"
                        android:layout_margin="13dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextBlack"
                        android:text="@string/text_wechat_pay"
                        android:textColor="@color/colorPayTextBlack"/>

                </LinearLayout>

                <RadioButton
                    android:id="@+id/recharge_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pay_bg"
                    android:button="@null"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="15dp"/>

            </RelativeLayout>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            style="@style/TextBlack"
            android:textColor="@color/colorTextGray"
            android:text="@string/text_recharge_num"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                style="@style/TextBlack"
                android:text="@string/text_yuan"/>

            <EditText
                android:id="@+id/recharge_edit_money"
                android:labelFor="@id/recharge_edit_money"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:inputType="number"/>

        </LinearLayout>

        <Button
            android:id="@+id/recharger_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_fast_recharge"
            style="@style/TextBlack"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
