<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shangui.shangui.activity.MenuActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBgGray"
        android:layout_marginTop="?attr/actionBarSize">

        <FrameLayout
            android:id="@+id/menu_personal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_personal"
                style="@style/TextBlack"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/more"
                android:layout_marginEnd="15dp"
                android:layout_gravity="end|center_vertical"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/menu_upgrade"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_upgrade"
                style="@style/TextBlack"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/more"
                android:layout_marginEnd="15dp"
                android:layout_gravity="end|center_vertical"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/menu_recharge"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_recharge"
                style="@style/TextBlack"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/more"
                android:layout_marginEnd="15dp"
                android:layout_gravity="end|center_vertical"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/menu_help"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_help"
                style="@style/TextBlack"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/more"
                android:layout_marginEnd="15dp"
                android:layout_gravity="end|center_vertical"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/menu_btn"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_logout"
                style="@style/TextBlack"
                android:layout_gravity="center"
                android:layout_margin="15dp"/>

        </FrameLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
